# mrs

./: Cargo.toml
src/: byte_vec.rs  connection.rs  lib.rs  main.rs  network.rs  raw.rs  server.rs
src/errors/: enums.rs
src/network/: mod.rs
src/network/connection/: mod.rs  state.rs
src/network/handle_packet/: mod.rs
src/network/handlers/: handshake.rs  mod.rs
src/packets/: mod.rs
src/packets/common/: disconnect.rs  mod.rs
src/packets/configuration/: client_information.rs  disconnect.rs  keep_alive.rs  known_packs.rs  mod.rs
src/packets/configuration/client_information/: chat_mode.rs  displayed_skin_parts.rs  main_hand.rs  mod.rs
src/packets/handshake/: handshake.rs  mod.rs  ping.rs  status.rs
src/packets/handshake/handshake/: mod.rs  next_state.rs
src/packets/login/: ack.rs  encryption_request.rs  mod.rs  start.rs  success.rs
src/raw/: ext.rs  mod.rs
src/types/: bit_set.rs  connection_state.rs  fixed_bit_set.rs  identifier.rs  mod.rs  player.rs  position.rs  text_component.rs  var_int.rs  var_long.rs
src/types/text_component/: click_event.rs  color.rs  hover_event.rs  mod.rs  style.rs
src/types/var_int/: mod.rs  sync.rs
src/types/var_long/: mod.rs  sync.rs
